# relu_region_visualization

./: ARCHITECTURE.md  README.md  pyproject.toml  requirements.txt
nnviz/: __init__.py  __main__.py  cli.py  config.py  data.py  main.py  model.py  train.py  utils.py
nnviz/viz/: __init__.py  boundary.py  grid.py  plot3d.py
nnviz/viz/exact_regions/: __init__.py  clip.py  enumerate.py  geometry.py  render.py
tests/: __init__.py  conftest.py  test_boundary.py  test_cli.py  test_clip.py  test_config.py  test_data.py  test_enumerate.py  test_geometry.py  test_grid.py  test_integration.py  test_model.py  test_render.py  test_train.py  test_utils.py
